lots of things tidy
